@@ -23,8 +23,6 @@ FEATURES:
 8 Use our own find-as-you-type mechanism (like conkeror does)
 8 make hints smarter, not only with characters from from hintchars, but use "NE" or "NP" for 'new posts' e.g. (might be too slow)
 7 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
-7 provide a buffer on the bottom where more than 1 line messages can be shown, preferrable
-  with color support (for things like :echo line1\nline2)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
 7 3d should delete 3 tabs
 6 downloading of links to filesystem (:save <filename>)
@@ -36,7 +34,6 @@ FEATURES:
 6 macros (qq)
 6 gf = view source?
 6 make a real one-tab-mode, divert _all_ other targets, possible by setting a firefox option (set popup=0-3)
-6 Shift-Insert in textboxes pastes selection contents
 6 page info support (ctrl-g, g<C-g>)
 5 Use arrow keys in preview window, and ctrl-w+j/k to switch to from preview window
 5 Sort :open completion by date? (use 'wildsort')
@@ -46,6 +43,7 @@ FEATURES:
 3 Splitting Windows with [:sp :vsp ctrl-w,s ctrl-w,v] and closing with [ctrl-w,q], moving with [ctrl-w,w or tab]
   have a look into the split browser extension
 3 :set should also set about:config options (with autocomplete)
+- many other ideas are listed in the wiki
 
 RANDOM IDEAS:
 * numbered tabs
