@@ -1,6 +1,7 @@
 <pre>
 2007-07-02:
 	* version 0.5
+	* :javascript <<EOF uses a better multiline input widget now
 	* new :map, :noremap, :mapclear and :unmap commands
 	* :saveas finally works (by calmar)
 	* Shift-insert pastes the selection content in text fields now
